parser.output
Terminals unused in grammar

    TM_MALLOC
    TM_RI
    TM_RC
    TM_WI
    TM_WC


Grammar

    0 $accept: NT_WHOLE $end

    1 NT_WHOLE: NT_CMD

    2 NT_CMD: TM_SKIP
    3       | NT_EXPR TM_ASGNOP NT_EXPR
    4       | NT_CMD TM_SEMICOL NT_CMD
    5       | TM_IF NT_EXPR TM_THEN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_ELSE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
    6       | TM_WHILE NT_EXPR TM_DO TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    7 NT_EXPR_2: TM_NAT
    8          | TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN
    9          | TM_IDENT
   10          | TM_NOT NT_EXPR_2
   11          | TM_MINUS NT_EXPR_2
   12          | TM_MUL NT_EXPR_2

   13 NT_EXPR: NT_EXPR_2
   14        | NT_EXPR TM_MUL NT_EXPR
   15        | NT_EXPR TM_PLUS NT_EXPR
   16        | NT_EXPR TM_MINUS NT_EXPR
   17        | NT_EXPR TM_DIV NT_EXPR
   18        | NT_EXPR TM_MOD NT_EXPR
   19        | NT_EXPR TM_LT NT_EXPR
   20        | NT_EXPR TM_GT NT_EXPR
   21        | NT_EXPR TM_LE NT_EXPR
   22        | NT_EXPR TM_GE NT_EXPR
   23        | NT_EXPR TM_EQ NT_EXPR
   24        | NT_EXPR TM_NE NT_EXPR
   25        | NT_EXPR TM_AND NT_EXPR
   26        | NT_EXPR TM_OR NT_EXPR


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TM_NAT <n> (258) 7
    TM_IDENT <i> (259) 9
    TM_LEFT_BRACE <none> (260) 5 6
    TM_RIGHT_BRACE <none> (261) 5 6
    TM_LEFT_PAREN <none> (262) 8
    TM_RIGHT_PAREN <none> (263) 8
    TM_SEMICOL <none> (264) 4
    TM_MALLOC <none> (265)
    TM_RI <none> (266)
    TM_RC <none> (267)
    TM_WI <none> (268)
    TM_WC <none> (269)
    TM_IF <none> (270) 5
    TM_THEN <none> (271) 5
    TM_ELSE <none> (272) 5
    TM_WHILE <none> (273) 6
    TM_DO <none> (274) 6
    TM_ASGNOP <none> (275) 3
    TM_OR <none> (276) 26
    TM_AND <none> (277) 25
    TM_NOT <none> (278) 10
    TM_LT <none> (279) 19
    TM_LE <none> (280) 21
    TM_GT <none> (281) 20
    TM_GE <none> (282) 22
    TM_EQ <none> (283) 23
    TM_NE <none> (284) 24
    TM_PLUS <none> (285) 15
    TM_MINUS <none> (286) 11 16
    TM_MUL <none> (287) 12 14
    TM_DIV <none> (288) 17
    TM_MOD <none> (289) 18
    TM_SKIP <c> (290) 2


Nonterminals, with rules where they appear

    $accept (36)
        on left: 0
    NT_WHOLE <c> (37)
        on left: 1
        on right: 0
    NT_CMD <c> (38)
        on left: 2 3 4 5 6
        on right: 1 4 5 6
    NT_EXPR_2 <e> (39)
        on left: 7 8 9 10 11 12
        on right: 10 11 12 13
    NT_EXPR <e> (40)
        on left: 13 14 15 16 17 18 19 20 21 22 23 24 25 26
        on right: 3 5 6 8 14 15 16 17 18 19 20 21 22 23 24 25 26


State 0

    0 $accept: • NT_WHOLE $end

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_IF          shift, and go to state 4
    TM_WHILE       shift, and go to state 5
    TM_NOT         shift, and go to state 6
    TM_MINUS       shift, and go to state 7
    TM_MUL         shift, and go to state 8
    TM_SKIP        shift, and go to state 9

    NT_WHOLE   go to state 10
    NT_CMD     go to state 11
    NT_EXPR_2  go to state 12
    NT_EXPR    go to state 13


State 1

    7 NT_EXPR_2: TM_NAT •

    $default  reduce using rule 7 (NT_EXPR_2)


State 2

    9 NT_EXPR_2: TM_IDENT •

    $default  reduce using rule 9 (NT_EXPR_2)


State 3

    8 NT_EXPR_2: TM_LEFT_PAREN • NT_EXPR TM_RIGHT_PAREN

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 6
    TM_MINUS       shift, and go to state 7
    TM_MUL         shift, and go to state 8

    NT_EXPR_2  go to state 12
    NT_EXPR    go to state 14


State 4

    5 NT_CMD: TM_IF • NT_EXPR TM_THEN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_ELSE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 6
    TM_MINUS       shift, and go to state 7
    TM_MUL         shift, and go to state 8

    NT_EXPR_2  go to state 12
    NT_EXPR    go to state 15


State 5

    6 NT_CMD: TM_WHILE • NT_EXPR TM_DO TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 6
    TM_MINUS       shift, and go to state 7
    TM_MUL         shift, and go to state 8

    NT_EXPR_2  go to state 12
    NT_EXPR    go to state 16


State 6

   10 NT_EXPR_2: TM_NOT • NT_EXPR_2

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 6
    TM_MINUS       shift, and go to state 7
    TM_MUL         shift, and go to state 8

    NT_EXPR_2  go to state 17


State 7

   11 NT_EXPR_2: TM_MINUS • NT_EXPR_2

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 6
    TM_MINUS       shift, and go to state 7
    TM_MUL         shift, and go to state 8

    NT_EXPR_2  go to state 18


State 8

   12 NT_EXPR_2: TM_MUL • NT_EXPR_2

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 6
    TM_MINUS       shift, and go to state 7
    TM_MUL         shift, and go to state 8

    NT_EXPR_2  go to state 19


State 9

    2 NT_CMD: TM_SKIP •

    $default  reduce using rule 2 (NT_CMD)


State 10

    0 $accept: NT_WHOLE • $end

    $end  shift, and go to state 20


State 11

    1 NT_WHOLE: NT_CMD •
    4 NT_CMD: NT_CMD • TM_SEMICOL NT_CMD

    TM_SEMICOL  shift, and go to state 21

    $default  reduce using rule 1 (NT_WHOLE)


State 12

   13 NT_EXPR: NT_EXPR_2 •

    $default  reduce using rule 13 (NT_EXPR)


State 13

    3 NT_CMD: NT_EXPR • TM_ASGNOP NT_EXPR
   14 NT_EXPR: NT_EXPR • TM_MUL NT_EXPR
   15        | NT_EXPR • TM_PLUS NT_EXPR
   16        | NT_EXPR • TM_MINUS NT_EXPR
   17        | NT_EXPR • TM_DIV NT_EXPR
   18        | NT_EXPR • TM_MOD NT_EXPR
   19        | NT_EXPR • TM_LT NT_EXPR
   20        | NT_EXPR • TM_GT NT_EXPR
   21        | NT_EXPR • TM_LE NT_EXPR
   22        | NT_EXPR • TM_GE NT_EXPR
   23        | NT_EXPR • TM_EQ NT_EXPR
   24        | NT_EXPR • TM_NE NT_EXPR
   25        | NT_EXPR • TM_AND NT_EXPR
   26        | NT_EXPR • TM_OR NT_EXPR

    TM_ASGNOP  shift, and go to state 22
    TM_OR      shift, and go to state 23
    TM_AND     shift, and go to state 24
    TM_LT      shift, and go to state 25
    TM_LE      shift, and go to state 26
    TM_GT      shift, and go to state 27
    TM_GE      shift, and go to state 28
    TM_EQ      shift, and go to state 29
    TM_NE      shift, and go to state 30
    TM_PLUS    shift, and go to state 31
    TM_MINUS   shift, and go to state 32
    TM_MUL     shift, and go to state 33
    TM_DIV     shift, and go to state 34
    TM_MOD     shift, and go to state 35


State 14

    8 NT_EXPR_2: TM_LEFT_PAREN NT_EXPR • TM_RIGHT_PAREN
   14 NT_EXPR: NT_EXPR • TM_MUL NT_EXPR
   15        | NT_EXPR • TM_PLUS NT_EXPR
   16        | NT_EXPR • TM_MINUS NT_EXPR
   17        | NT_EXPR • TM_DIV NT_EXPR
   18        | NT_EXPR • TM_MOD NT_EXPR
   19        | NT_EXPR • TM_LT NT_EXPR
   20        | NT_EXPR • TM_GT NT_EXPR
   21        | NT_EXPR • TM_LE NT_EXPR
   22        | NT_EXPR • TM_GE NT_EXPR
   23        | NT_EXPR • TM_EQ NT_EXPR
   24        | NT_EXPR • TM_NE NT_EXPR
   25        | NT_EXPR • TM_AND NT_EXPR
   26        | NT_EXPR • TM_OR NT_EXPR

    TM_RIGHT_PAREN  shift, and go to state 36
    TM_OR           shift, and go to state 23
    TM_AND          shift, and go to state 24
    TM_LT           shift, and go to state 25
    TM_LE           shift, and go to state 26
    TM_GT           shift, and go to state 27
    TM_GE           shift, and go to state 28
    TM_EQ           shift, and go to state 29
    TM_NE           shift, and go to state 30
    TM_PLUS         shift, and go to state 31
    TM_MINUS        shift, and go to state 32
    TM_MUL          shift, and go to state 33
    TM_DIV          shift, and go to state 34
    TM_MOD          shift, and go to state 35


State 15

    5 NT_CMD: TM_IF NT_EXPR • TM_THEN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_ELSE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   14 NT_EXPR: NT_EXPR • TM_MUL NT_EXPR
   15        | NT_EXPR • TM_PLUS NT_EXPR
   16        | NT_EXPR • TM_MINUS NT_EXPR
   17        | NT_EXPR • TM_DIV NT_EXPR
   18        | NT_EXPR • TM_MOD NT_EXPR
   19        | NT_EXPR • TM_LT NT_EXPR
   20        | NT_EXPR • TM_GT NT_EXPR
   21        | NT_EXPR • TM_LE NT_EXPR
   22        | NT_EXPR • TM_GE NT_EXPR
   23        | NT_EXPR • TM_EQ NT_EXPR
   24        | NT_EXPR • TM_NE NT_EXPR
   25        | NT_EXPR • TM_AND NT_EXPR
   26        | NT_EXPR • TM_OR NT_EXPR

    TM_THEN   shift, and go to state 37
    TM_OR     shift, and go to state 23
    TM_AND    shift, and go to state 24
    TM_LT     shift, and go to state 25
    TM_LE     shift, and go to state 26
    TM_GT     shift, and go to state 27
    TM_GE     shift, and go to state 28
    TM_EQ     shift, and go to state 29
    TM_NE     shift, and go to state 30
    TM_PLUS   shift, and go to state 31
    TM_MINUS  shift, and go to state 32
    TM_MUL    shift, and go to state 33
    TM_DIV    shift, and go to state 34
    TM_MOD    shift, and go to state 35


State 16

    6 NT_CMD: TM_WHILE NT_EXPR • TM_DO TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   14 NT_EXPR: NT_EXPR • TM_MUL NT_EXPR
   15        | NT_EXPR • TM_PLUS NT_EXPR
   16        | NT_EXPR • TM_MINUS NT_EXPR
   17        | NT_EXPR • TM_DIV NT_EXPR
   18        | NT_EXPR • TM_MOD NT_EXPR
   19        | NT_EXPR • TM_LT NT_EXPR
   20        | NT_EXPR • TM_GT NT_EXPR
   21        | NT_EXPR • TM_LE NT_EXPR
   22        | NT_EXPR • TM_GE NT_EXPR
   23        | NT_EXPR • TM_EQ NT_EXPR
   24        | NT_EXPR • TM_NE NT_EXPR
   25        | NT_EXPR • TM_AND NT_EXPR
   26        | NT_EXPR • TM_OR NT_EXPR

    TM_DO     shift, and go to state 38
    TM_OR     shift, and go to state 23
    TM_AND    shift, and go to state 24
    TM_LT     shift, and go to state 25
    TM_LE     shift, and go to state 26
    TM_GT     shift, and go to state 27
    TM_GE     shift, and go to state 28
    TM_EQ     shift, and go to state 29
    TM_NE     shift, and go to state 30
    TM_PLUS   shift, and go to state 31
    TM_MINUS  shift, and go to state 32
    TM_MUL    shift, and go to state 33
    TM_DIV    shift, and go to state 34
    TM_MOD    shift, and go to state 35


State 17

   10 NT_EXPR_2: TM_NOT NT_EXPR_2 •

    $default  reduce using rule 10 (NT_EXPR_2)


State 18

   11 NT_EXPR_2: TM_MINUS NT_EXPR_2 •

    $default  reduce using rule 11 (NT_EXPR_2)


State 19

   12 NT_EXPR_2: TM_MUL NT_EXPR_2 •

    $default  reduce using rule 12 (NT_EXPR_2)


State 20

    0 $accept: NT_WHOLE $end •

    $default  accept


State 21

    4 NT_CMD: NT_CMD TM_SEMICOL • NT_CMD

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_IF          shift, and go to state 4
    TM_WHILE       shift, and go to state 5
    TM_NOT         shift, and go to state 6
    TM_MINUS       shift, and go to state 7
    TM_MUL         shift, and go to state 8
    TM_SKIP        shift, and go to state 9

    NT_CMD     go to state 39
    NT_EXPR_2  go to state 12
    NT_EXPR    go to state 13


State 22

    3 NT_CMD: NT_EXPR TM_ASGNOP • NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 6
    TM_MINUS       shift, and go to state 7
    TM_MUL         shift, and go to state 8

    NT_EXPR_2  go to state 12
    NT_EXPR    go to state 40


State 23

   26 NT_EXPR: NT_EXPR TM_OR • NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 6
    TM_MINUS       shift, and go to state 7
    TM_MUL         shift, and go to state 8

    NT_EXPR_2  go to state 12
    NT_EXPR    go to state 41


State 24

   25 NT_EXPR: NT_EXPR TM_AND • NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 6
    TM_MINUS       shift, and go to state 7
    TM_MUL         shift, and go to state 8

    NT_EXPR_2  go to state 12
    NT_EXPR    go to state 42


State 25

   19 NT_EXPR: NT_EXPR TM_LT • NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 6
    TM_MINUS       shift, and go to state 7
    TM_MUL         shift, and go to state 8

    NT_EXPR_2  go to state 12
    NT_EXPR    go to state 43


State 26

   21 NT_EXPR: NT_EXPR TM_LE • NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 6
    TM_MINUS       shift, and go to state 7
    TM_MUL         shift, and go to state 8

    NT_EXPR_2  go to state 12
    NT_EXPR    go to state 44


State 27

   20 NT_EXPR: NT_EXPR TM_GT • NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 6
    TM_MINUS       shift, and go to state 7
    TM_MUL         shift, and go to state 8

    NT_EXPR_2  go to state 12
    NT_EXPR    go to state 45


State 28

   22 NT_EXPR: NT_EXPR TM_GE • NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 6
    TM_MINUS       shift, and go to state 7
    TM_MUL         shift, and go to state 8

    NT_EXPR_2  go to state 12
    NT_EXPR    go to state 46


State 29

   23 NT_EXPR: NT_EXPR TM_EQ • NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 6
    TM_MINUS       shift, and go to state 7
    TM_MUL         shift, and go to state 8

    NT_EXPR_2  go to state 12
    NT_EXPR    go to state 47


State 30

   24 NT_EXPR: NT_EXPR TM_NE • NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 6
    TM_MINUS       shift, and go to state 7
    TM_MUL         shift, and go to state 8

    NT_EXPR_2  go to state 12
    NT_EXPR    go to state 48


State 31

   15 NT_EXPR: NT_EXPR TM_PLUS • NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 6
    TM_MINUS       shift, and go to state 7
    TM_MUL         shift, and go to state 8

    NT_EXPR_2  go to state 12
    NT_EXPR    go to state 49


State 32

   16 NT_EXPR: NT_EXPR TM_MINUS • NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 6
    TM_MINUS       shift, and go to state 7
    TM_MUL         shift, and go to state 8

    NT_EXPR_2  go to state 12
    NT_EXPR    go to state 50


State 33

   14 NT_EXPR: NT_EXPR TM_MUL • NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 6
    TM_MINUS       shift, and go to state 7
    TM_MUL         shift, and go to state 8

    NT_EXPR_2  go to state 12
    NT_EXPR    go to state 51


State 34

   17 NT_EXPR: NT_EXPR TM_DIV • NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 6
    TM_MINUS       shift, and go to state 7
    TM_MUL         shift, and go to state 8

    NT_EXPR_2  go to state 12
    NT_EXPR    go to state 52


State 35

   18 NT_EXPR: NT_EXPR TM_MOD • NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 6
    TM_MINUS       shift, and go to state 7
    TM_MUL         shift, and go to state 8

    NT_EXPR_2  go to state 12
    NT_EXPR    go to state 53


State 36

    8 NT_EXPR_2: TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN •

    $default  reduce using rule 8 (NT_EXPR_2)


State 37

    5 NT_CMD: TM_IF NT_EXPR TM_THEN • TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_ELSE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_LEFT_BRACE  shift, and go to state 54


State 38

    6 NT_CMD: TM_WHILE NT_EXPR TM_DO • TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_LEFT_BRACE  shift, and go to state 55


State 39

    4 NT_CMD: NT_CMD • TM_SEMICOL NT_CMD
    4       | NT_CMD TM_SEMICOL NT_CMD •

    TM_SEMICOL  shift, and go to state 21

    $default  reduce using rule 4 (NT_CMD)


State 40

    3 NT_CMD: NT_EXPR TM_ASGNOP NT_EXPR •
   14 NT_EXPR: NT_EXPR • TM_MUL NT_EXPR
   15        | NT_EXPR • TM_PLUS NT_EXPR
   16        | NT_EXPR • TM_MINUS NT_EXPR
   17        | NT_EXPR • TM_DIV NT_EXPR
   18        | NT_EXPR • TM_MOD NT_EXPR
   19        | NT_EXPR • TM_LT NT_EXPR
   20        | NT_EXPR • TM_GT NT_EXPR
   21        | NT_EXPR • TM_LE NT_EXPR
   22        | NT_EXPR • TM_GE NT_EXPR
   23        | NT_EXPR • TM_EQ NT_EXPR
   24        | NT_EXPR • TM_NE NT_EXPR
   25        | NT_EXPR • TM_AND NT_EXPR
   26        | NT_EXPR • TM_OR NT_EXPR

    TM_OR     shift, and go to state 23
    TM_AND    shift, and go to state 24
    TM_LT     shift, and go to state 25
    TM_LE     shift, and go to state 26
    TM_GT     shift, and go to state 27
    TM_GE     shift, and go to state 28
    TM_EQ     shift, and go to state 29
    TM_NE     shift, and go to state 30
    TM_PLUS   shift, and go to state 31
    TM_MINUS  shift, and go to state 32
    TM_MUL    shift, and go to state 33
    TM_DIV    shift, and go to state 34
    TM_MOD    shift, and go to state 35

    $default  reduce using rule 3 (NT_CMD)


State 41

   14 NT_EXPR: NT_EXPR • TM_MUL NT_EXPR
   15        | NT_EXPR • TM_PLUS NT_EXPR
   16        | NT_EXPR • TM_MINUS NT_EXPR
   17        | NT_EXPR • TM_DIV NT_EXPR
   18        | NT_EXPR • TM_MOD NT_EXPR
   19        | NT_EXPR • TM_LT NT_EXPR
   20        | NT_EXPR • TM_GT NT_EXPR
   21        | NT_EXPR • TM_LE NT_EXPR
   22        | NT_EXPR • TM_GE NT_EXPR
   23        | NT_EXPR • TM_EQ NT_EXPR
   24        | NT_EXPR • TM_NE NT_EXPR
   25        | NT_EXPR • TM_AND NT_EXPR
   26        | NT_EXPR • TM_OR NT_EXPR
   26        | NT_EXPR TM_OR NT_EXPR •

    TM_AND    shift, and go to state 24
    TM_LT     shift, and go to state 25
    TM_LE     shift, and go to state 26
    TM_GT     shift, and go to state 27
    TM_GE     shift, and go to state 28
    TM_EQ     shift, and go to state 29
    TM_NE     shift, and go to state 30
    TM_PLUS   shift, and go to state 31
    TM_MINUS  shift, and go to state 32
    TM_MUL    shift, and go to state 33
    TM_DIV    shift, and go to state 34
    TM_MOD    shift, and go to state 35

    $default  reduce using rule 26 (NT_EXPR)


State 42

   14 NT_EXPR: NT_EXPR • TM_MUL NT_EXPR
   15        | NT_EXPR • TM_PLUS NT_EXPR
   16        | NT_EXPR • TM_MINUS NT_EXPR
   17        | NT_EXPR • TM_DIV NT_EXPR
   18        | NT_EXPR • TM_MOD NT_EXPR
   19        | NT_EXPR • TM_LT NT_EXPR
   20        | NT_EXPR • TM_GT NT_EXPR
   21        | NT_EXPR • TM_LE NT_EXPR
   22        | NT_EXPR • TM_GE NT_EXPR
   23        | NT_EXPR • TM_EQ NT_EXPR
   24        | NT_EXPR • TM_NE NT_EXPR
   25        | NT_EXPR • TM_AND NT_EXPR
   25        | NT_EXPR TM_AND NT_EXPR •
   26        | NT_EXPR • TM_OR NT_EXPR

    TM_LT     shift, and go to state 25
    TM_LE     shift, and go to state 26
    TM_GT     shift, and go to state 27
    TM_GE     shift, and go to state 28
    TM_EQ     shift, and go to state 29
    TM_NE     shift, and go to state 30
    TM_PLUS   shift, and go to state 31
    TM_MINUS  shift, and go to state 32
    TM_MUL    shift, and go to state 33
    TM_DIV    shift, and go to state 34
    TM_MOD    shift, and go to state 35

    $default  reduce using rule 25 (NT_EXPR)


State 43

   14 NT_EXPR: NT_EXPR • TM_MUL NT_EXPR
   15        | NT_EXPR • TM_PLUS NT_EXPR
   16        | NT_EXPR • TM_MINUS NT_EXPR
   17        | NT_EXPR • TM_DIV NT_EXPR
   18        | NT_EXPR • TM_MOD NT_EXPR
   19        | NT_EXPR • TM_LT NT_EXPR
   19        | NT_EXPR TM_LT NT_EXPR •
   20        | NT_EXPR • TM_GT NT_EXPR
   21        | NT_EXPR • TM_LE NT_EXPR
   22        | NT_EXPR • TM_GE NT_EXPR
   23        | NT_EXPR • TM_EQ NT_EXPR
   24        | NT_EXPR • TM_NE NT_EXPR
   25        | NT_EXPR • TM_AND NT_EXPR
   26        | NT_EXPR • TM_OR NT_EXPR

    TM_PLUS   shift, and go to state 31
    TM_MINUS  shift, and go to state 32
    TM_MUL    shift, and go to state 33
    TM_DIV    shift, and go to state 34
    TM_MOD    shift, and go to state 35

    $default  reduce using rule 19 (NT_EXPR)


State 44

   14 NT_EXPR: NT_EXPR • TM_MUL NT_EXPR
   15        | NT_EXPR • TM_PLUS NT_EXPR
   16        | NT_EXPR • TM_MINUS NT_EXPR
   17        | NT_EXPR • TM_DIV NT_EXPR
   18        | NT_EXPR • TM_MOD NT_EXPR
   19        | NT_EXPR • TM_LT NT_EXPR
   20        | NT_EXPR • TM_GT NT_EXPR
   21        | NT_EXPR • TM_LE NT_EXPR
   21        | NT_EXPR TM_LE NT_EXPR •
   22        | NT_EXPR • TM_GE NT_EXPR
   23        | NT_EXPR • TM_EQ NT_EXPR
   24        | NT_EXPR • TM_NE NT_EXPR
   25        | NT_EXPR • TM_AND NT_EXPR
   26        | NT_EXPR • TM_OR NT_EXPR

    TM_PLUS   shift, and go to state 31
    TM_MINUS  shift, and go to state 32
    TM_MUL    shift, and go to state 33
    TM_DIV    shift, and go to state 34
    TM_MOD    shift, and go to state 35

    $default  reduce using rule 21 (NT_EXPR)


State 45
